flex/flex-tests/testData/js2_highlighting/IncompatibleImplementationFix3.js2
package {
import flash.events.EventDispatcher;
interface <error descr="Class 'FooBase' should be defined in file 'FooBase.js2'">FooBase</error> {
    function foo():EventDispatcher;
}
}

<error descr="Package should be first statement in file">package</error> {
class <error descr="Class 'Foo' should be defined in file 'Foo.js2'">Foo</error> implements FooBase {
    public function foo():<error descr="Incompatible implementation, should have return type 'flash.events.EventDispatcher'">int</error> {
    }
}
}
